HPCDATAMGM-1721: Fix header lines, also add headers to the Copy functionality

--- a/src/hpc-web/src/main/resources/templates/reports.html
+++ b/src/hpc-web/src/main/resources/templates/reports.html
@@ -310,22 +310,13 @@ body.loading .overlay{
 					<table class="table">
 						<tbody>
 							<tr id='attrRow0' th:each="report : ${reports}">
-								<td style="white-space: nowrap" align="right" colspan="2">
+								<td style="white-space: nowrap; border: none" align="right" colspan="2">
 									<table class="table" id="singlereportgrid">
 										<caption style="font-weight:bold" th:text="${reportName}"></caption>
-										<div th:if="${reports[0].doc != null and !reports[0].doc.isEmpty()}">
-											<caption style="background-color: #006DCC; color: white; font-weight:bold" colspan="2" th:text="'DOC: ' + ${reports[0].doc}"></caption>
-										</div>
-										<div th:if="${reports[0].user != null and !reports[0].user.isEmpty()}">
-											<caption style="background-color: #006DCC; color: white; font-weight:bold" colspan="2" th:text="'User: ' + ${reports[0].user}"></caption>
-										</div>
-										<div th:if="${reports[0].path != null and !reports[0].path.isEmpty()}">
-											<caption style="background-color: #006DCC; color: white; font-weight:bold" colspan="2" th:text="'Base Path: ' + ${reports[0].path}"></caption>
-										</div>
-										<div th:if="${report.fromDate != null and !report.fromDate.isEmpty()}">
-											<caption style="background-color: #006DCC; color: white; font-weight:bold" colspan="2" th:text="'Reporting Period: From ' + ${report.fromDate} + ' to ' + ${report.toDate}">></caption>
-										</div>
-
+										<caption th:if="${reports[0].doc != null and !reports[0].doc.isEmpty()}" style="background-color: #006DCC; color: white; font-weight:bold; border-bottom: 2px solid #dddddd; padding: 8px" colspan="2" th:text="'DOC: ' + ${reports[0].doc}"></caption>
+										<caption th:if="${reports[0].user != null and !reports[0].user.isEmpty()}" style="background-color: #006DCC; color: white; font-weight:bold; border-bottom: 2px solid #dddddd; padding: 8px" colspan="2" th:text="'User: ' + ${reports[0].user}"></caption>
+										<caption th:if="${reports[0].path != null and !reports[0].path.isEmpty()}" style="background-color: #006DCC; color: white; font-weight:bold; border-bottom: 2px solid #dddddd; padding: 8px" colspan="2" th:text="'Base Path: ' + ${reports[0].path}"></caption>
+										<caption th:if="${report.fromDate != null and !report.fromDate.isEmpty()}" style="background-color: #006DCC; color: white; font-weight:bold; border-bottom: 2px solid #dddddd; padding: 8px" colspan="2" th:text="'Reporting Period: From ' + ${report.fromDate} + ' to ' + ${report.toDate}"></caption>
 										<thead>
 											<tr id='attrRowhead'>
 												<td style="color: black; font-weight:bold" id='index0' th:text="Name"></td>
@@ -491,27 +482,27 @@ body.loading .overlay{
 		var reportHeaderTitle = "";
 		let pretag = "DME_";
 		let tag = `_${(new Date().toJSON().slice(0,10))}`;
-		let messageTopDateRange = "(Date Range: " +  document.getElementById("fromDate").value + "-" + document.getElementById("toDate").value + ")";
+		let messageTopDateRange = " Date Range: " +  document.getElementById("fromDate").value + "-" + document.getElementById("toDate").value;
 		switch (reportType) {
 			case 'USAGE_SUMMARY_BY_BASEPATH_BY_DATE_RANGE':
 				exportFileName= pretag + "Basepath" + tag;
-				reportHeaderTitle= "Data Archival Usage Report for Basepath " + document.getElementById("basepath").value + ", " + messageTopDateRange;
+				reportHeaderTitle= "Data Archival Usage Report for Basepath: " + document.getElementById("basepath").value + ", " + messageTopDateRange;
 				break;
 			case 'USAGE_SUMMARY_BY_DOC_BY_DATE_RANGE':
 				exportFileName= pretag + "DOC" + tag;
-				reportHeaderTitle = "Data Archival Usage Report for DOC " + document.getElementById("doc").value + ", " + messageTopDateRange;
+				reportHeaderTitle = "Data Archival Usage Report for DOC: " + document.getElementById("doc").value + ", " + messageTopDateRange;
 				break;
 			case 'USAGE_SUMMARY_BY_USER_BY_DATE_RANGE':
 				exportFileName= pretag + "User" + tag;
-				reportHeaderTitle = "Data Archival Usage Report for User" + document.getElementById("user").value + ", " + messageTopDateRange;
+				reportHeaderTitle = "Data Archival Usage Report for User: " + document.getElementById("user").value + ", " + messageTopDateRange;
 				break;
 			case 'USAGE_SUMMARY_BY_DATE_RANGE':
 				exportFileName= pretag + "Summary" + tag;
-				reportHeaderTitle = "Data Archival Usage Report" + ", " + messageTopDateRange;
+				reportHeaderTitle = "Data Archival Usage Report " + ", " + messageTopDateRange;
 				break;
 			case 'USAGE_SUMMARY_BY_PATH_BY_DATE_RANGE':
 				exportFileName= pretag + "Path" + tag;
-				reportHeaderTitle = "Data Archival Usage Report for Path" + document.getElementById("id_collection_path").value + ", " + messageTopDateRange;
+				reportHeaderTitle = "Data Archival Usage Report for Path: " + document.getElementById("id_collection_path").value + ", " + messageTopDateRange;
 				break;
 		}
 		$('#singlereportgrid').DataTable({
@@ -522,20 +513,18 @@ body.loading .overlay{
 			buttons: [
 							{
 								extend: 'copyHtml5',
-								//exportOptions: exportOptions,
-								//text: '<i class="fa fa-files-o">Copy</i>',
 								text: 'Copy',
+								title: "",
+								messageTop: reportHeaderTitle,
 								titleAttr: 'Copy to Clipboard',
 							},
 							{
 								extend: 'excelHtml5',
 								filename: exportFileName,
 								title: null,
-								//text: '<i class="fa fa-file-excel-o">Excel</i>',
 								text: 'Excel',
 								messageTop: reportHeaderTitle,
 								titleAttr: 'Export to Excel',
-								//exportOptions: exportOptions
 							}
 					],
 			"columnDefs": [{"targets": [0,1], "orderable": false}],
