HPCDATAMGM-1704: Users dropdown is populated only when the User selects to run the User reports

--- a/src/hpc-web/src/main/resources/templates/reports.html
+++ b/src/hpc-web/src/main/resources/templates/reports.html
@@ -150,6 +150,7 @@ body.loading .overlay{
 <script th:inline="javascript">
 /*<![CDATA[*/
     var selected = [[${reportRequest.getReportType()}]];
+	var userselected = [[${reportRequest.getUser()}]];
 /*]]>*/
 </script>
 </head>
@@ -225,11 +226,6 @@ body.loading .overlay{
 								<select size="1"
 									id="user" name="user" class="userSelect" style="width: 100%">
 										<option></option>
-										<option
-											th:each="entry : ${docUsers}"
-											th:value="${entry.getUserId()}" th:text="${entry.getFirstName() + ' ' + entry.getLastName()}"
-											th:selected="${reportRequest.getUser() == entry.getUserId()}">
-											Wireframe</option>
 								</select>
 							</div>
 						</div>
@@ -918,6 +914,25 @@ body.loading .overlay{
       		basepathListEle.style.display = "none";
       		pathEle.style.display = "none";
 			assaySummaryCheckboxEle.style.display = "none";
+			if ($('#user option').length == 1) {
+					let uri = '/reports/getUsers';
+					$.ajax({
+							type: 'GET',
+							url: uri,
+							dataType: 'json'
+						}).done(function (result) {
+							var data = JSON.parse(result.message.replace("\\", ""));
+							$.each(data, function (index, value) {
+								if(value.userId === userselected){
+									$('#user').append('<option value="' + value.userId + '" selected=true>' + value.displayName + '</option>');
+									/*$('#user option[value=value.user.id]').attr("selected", "selected");*/
+								} else {
+									$('#user').append('<option value="' + value.userId + '">' + value.displayName + '</option>');
+								}
+						});
+						$('#user option[value=userselected]').attr("selected", "selected");
+					});
+				}
       	}
       	else if(selectedValue == "USAGE_SUMMARY_BY_BASEPATH")
       	{
