--- a/src/hpc-web/src/main/resources/templates/uploadtaskboard.html
+++ b/src/hpc-web/src/main/resources/templates/uploadtaskboard.html
@@ -263,7 +263,7 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', function ($scope, $h
 		if (checkBox.checked == true){
 			window.location.href = "/uploadtasks?queryAll=true";
 		} else {
-			window.location.href = "/uploadtasks";
+			window.location.href = "/uploadtasks?queryAll=false";
 		}
 	}
 	
@@ -273,19 +273,19 @@ app.controller('MainCtrl', ['$scope', '$http', '$interval', function ($scope, $h
 		if(action == "next" && checkBox != null && checkBox.checked == true)
 		 	window.location.href = "/uploadtasks?queryAll=true&page=" + (parseInt(currentPage) +1);
 		else if (action == "next")
-			window.location.href = "/uploadtasks?page=" + (parseInt(currentPage) +1);
+			window.location.href = "/uploadtasks?queryAll=false&page=" + (parseInt(currentPage) +1);
 		else if(action == "previous" && checkBox != null && checkBox.checked == true)
 			window.location.href = "/uploadtasks?queryAll=true&page=" + (parseInt(currentPage) - 1);
 		else if(action == "previous")
-			window.location.href = "/uploadtasks?page=" + (parseInt(currentPage) - 1);
+			window.location.href = "/uploadtasks?queryAll=false&page=" + (parseInt(currentPage) - 1);
 		else if(action == "first" && checkBox != null && checkBox.checked == true)
 			window.location.href = "/uploadtasks?queryAll=true&page=1";
 		else if(action == "first")
-			window.location.href = "/uploadtasks?page=1";
+			window.location.href = "/uploadtasks?queryAll=false&page=1";
 		else if(action == "last" && checkBox != null && checkBox.checked == true)
 			window.location.href = "/uploadtasks?queryAll=true&page=" + totalPages;
 		else if(action == "last")
-			window.location.href = "/uploadtasks?page=" + totalPages;
+			window.location.href = "/uploadtasks?queryAll=false&page=" + totalPages;
     }
 	
 	if(currentPage == "1")
