HPCDATAMGM-1720: removed grey space on top of footer on the browse page

--- a/src/hpc-web/src/main/resources/templates/browse.html
+++ b/src/hpc-web/src/main/resources/templates/browse.html
@@ -376,7 +376,7 @@ cursor: pointer;
 		<div th:include="header :: header"></div>
 		<!--main content start-->
 		<section id="main-content">
-			<section class="wrapper">
+			<section class="wrapper-browse">
 				<!--Row start-->
 				<div class="row">
 					<div class="col-md-12" style="word-break:break-all">
