--- a/src/hpc-web/src/main/resources/static/css/style.css
+++ b/src/hpc-web/src/main/resources/static/css/style.css
@@ -597,6 +597,17 @@ ul.sidebar-menu li.active a i {
     width: 100%;
 }
 
+.wrapper-browse {
+    display: inline-block;
+    margin-bottom: 1px;
+    padding-top: 15px;
+    padding-right: 15px;
+    padding-bottom: 1px;
+    padding-left: 15px;
+    height: 825px;
+    width: 100%;
+}
+
 
 #appnavbar.navbar {
     border-radius: 0px;
