HPCDATAMGM-1721: Remove Show Entries drop down on single report

--- a/src/hpc-web/src/main/resources/templates/reports.html
+++ b/src/hpc-web/src/main/resources/templates/reports.html
@@ -515,8 +515,7 @@ body.loading .overlay{
 		$('#singlereportgrid').DataTable({
 			"pageLength": -1,
 			 "order": [],
-			 "lengthMenu": [[5, 10, -1], [5, 10, "All"]],
-			dom: 'Blfrtip',
+			dom: 'Bfrtip',
 			buttons: [
 							{
 								extend: 'copyHtml5',
