HPCDATAMGM-1721: remove the pagination and information at bottom of the page

--- a/src/hpc-web/src/main/resources/templates/reports.html
+++ b/src/hpc-web/src/main/resources/templates/reports.html
@@ -515,7 +515,7 @@ body.loading .overlay{
 		$('#singlereportgrid').DataTable({
 			"pageLength": -1,
 			 "order": [],
-			dom: 'Bfrtip',
+			dom: 'Bfrt',
 			buttons: [
 							{
 								extend: 'copyHtml5',
