--- a/src/hpc-web/src/main/resources/templates/adddatafilebulk.html
+++ b/src/hpc-web/src/main/resources/templates/adddatafilebulk.html
@@ -645,11 +645,57 @@
 
 	function validate()
 	{
-	  var inputPath = document.getElementById("path").value;
-	  if (inputPath) {
-	    inputPath = inputPath.trim();
-	  }
-
+		if($('#bulkTypeS3').prop('checked')) {
+			var bucketName = document.getElementById("bucketName").value;
+			if(!bucketName || (bucketName.trim() === "")){
+				alert("Please enter S3 Bucket Name");
+				return false;
+			} 
+			var s3Path = document.getElementById("s3Path").value;
+			if(!s3Path || (s3Path.trim() === "")){
+				alert("Please enter S3 Path");
+				return false;
+			}
+			var accessKey = document.getElementById("accessKey").value;
+			if(!accessKey || (accessKey.trim() === "")){
+				alert("Please enter S3 Access Key");
+				return false;
+			}
+			var secretKey = document.getElementById("secretKey").value;
+			if(!secretKey || (secretKey.trim() === "")){
+				alert("Please enter S3 Secret Access Key");
+				return false;
+			}
+			var region = document.getElementById("region").value;
+			if(!region || (region.trim() === "")){
+				alert("Please enter S3 Region");
+				return false;
+			}
+			if(s3Path === "/"){
+				alert("Please re-enter S3 Source Path.S3 Path cannot be a '/'. ");
+				return false;
+			}
+		}
+		if($('#bulkTypeGC').prop('checked')) {
+			var gcBucketName = document.getElementById("gcbucketName").value;
+			if(!gcBucketName || (gcBucketName.trim() === "")){
+				alert("Please enter Google Cloud Bucket Name");
+				return false;
+			}
+			var gcPath = document.getElementById("gcPath").value;
+			if(!gcPath || (gcPath.trim() === "")){
+				alert("Please enter Google Cloud Path");
+				return false;
+			}
+			if(gcPath === "/"){
+				alert("Please re-enter Google Cloud source path. The Google Cloud path cannot be a '/'. ");
+				return false;
+			}
+		}
+		var inputPath = document.getElementById("path").value;
+		if (inputPath) {
+			inputPath = inputPath.trim();
+		}
 		if(!inputPath)
 		{
 			alert("Path is missing!")
