HPCDATAMGM-1764: Add line breaks in excel export for cells with multiple objects

--- a/src/hpc-web/src/main/resources/templates/reports.html
+++ b/src/hpc-web/src/main/resources/templates/reports.html
@@ -538,6 +538,14 @@ body.loading .overlay{
 								text: 'Excel',
 								messageTop: reportHeaderTitle,
 								titleAttr: 'Export to Excel',
+								exportOptions: {
+											format: {
+												body: function ( data, row, column, node ) {
+												// Replace <br/> by line feed
+												return data.split('<br>').join("\r\n");
+												}
+											}
+										},
 							}
 					],
 			"columnDefs": [{"targets": [0,1], "orderable": false}],
