--- a/src/hpc-web/src/main/resources/templates/datahierarchy.html
+++ b/src/hpc-web/src/main/resources/templates/datahierarchy.html
@@ -15,13 +15,19 @@
   background-clip: padding-box;
   outline: none;
 }
+.required {
+  color:red;
+}
+.required:after {
+  content:"*";
+}
 </style>
 </head>
 <body>
 
 	<div class="modal-header">
 		<button type="button" class="close" data-dismiss="modal">&times;</button>
-		<h4 class="modal-title">Valid Hierarchy and Mandatory Metadata</h4>
+		<h4 class="modal-title">Valid Hierarchy and Mandatory/Optional Metadata</h4>
 	</div>
 	<div class="modal-body">
 	  <div th:if="${hierarchy != null}">
@@ -32,11 +38,36 @@
 					<div style="display: none">
 						<div th:each="entry : ${collectionMetadata}"
 							th:if="${collectionMetadata != null}">
+							<div class="required" th:text="${entry.getAttribute()}"
+								th:if="${#strings.isEmpty(entry.getDefaultValue()) and entry.getMandatory() and #lists.contains(entry.getCollectionTypes(), hierarchy.collectionType)}"></div>
 							<div th:text="${entry.getAttribute()}"
-								th:if="${entry.getMandatory() and #lists.contains(entry.getCollectionTypes(), hierarchy.collectionType)}"></div>
+								th:if="${#strings.isEmpty(entry.getDefaultValue()) and !entry.getMandatory() and #lists.contains(entry.getCollectionTypes(), hierarchy.collectionType)}"></div>
+							<div class="required" th:text="${entry.getAttribute()} + ' (Default: ' + ${entry.getDefaultValue()} + ')'"
+								th:if="${!#strings.isEmpty(entry.getDefaultValue()) and entry.getMandatory() and #lists.contains(entry.getCollectionTypes(), hierarchy.collectionType)}"></div>
+							<div th:text="${entry.getAttribute()} + ' (Default: ' + ${entry.getDefaultValue()} + ')'"
+								th:if="${!#strings.isEmpty(entry.getDefaultValue()) and !entry.getMandatory() and #lists.contains(entry.getCollectionTypes(), hierarchy.collectionType)}"></div>
 						</div>
 					</div>
 					<section th:include="@{datahierarchyfragment} :: hierarchy" th:with="hierarchyList=${hierarchy.subCollectionsHierarchies}"></section>
+            </li>
+        </ul>
+        <ul class="tree">
+            <li>
+                <a>DataObject</a>
+                <a style="border:none" onclick="show(this)"><i title="Show mandatory metadata" class="fa fa-plus"></i></a>
+					<div style="display: none">
+						<div th:each="entry : ${dataObjectMetadata}"
+							th:if="${dataObjectMetadata != null}">
+							<div class="required" th:text="${entry.getAttribute()}"
+								th:if="${#strings.isEmpty(entry.getDefaultValue()) and entry.getMandatory()}"></div>
+							<div th:text="${entry.getAttribute()}"
+								th:if="${#strings.isEmpty(entry.getDefaultValue()) and !entry.getMandatory()}"></div>
+							<div class="required" th:text="${entry.getAttribute()} + ' (Default: ' + ${entry.getDefaultValue()} + ')'"
+								th:if="${!#strings.isEmpty(entry.getDefaultValue()) and entry.getMandatory()}"></div>
+							<div th:text="${entry.getAttribute()} + ' (Default: ' + ${entry.getDefaultValue()} + ')'"
+								th:if="${!#strings.isEmpty(entry.getDefaultValue()) and !entry.getMandatory()}"></div>
+						</div>
+					</div>
             </li>
         </ul>
       </div>  
